--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -5,7 +5,7 @@ import SectionLayout from "../../layout/SectionLayout.astro";
 
 export async function getStaticPaths() {
   const data = await fetch(
-    "https://gt7jeo2xu2bdx4ozhdjodfngzu0uuldj.lambda-url.us-east-1.on.aws/"
+  import.meta.env.PUBLIC_BLOG_URL
 ).then((response) => response.json());
     return data.map(({ sk, title, description }) => {
       
@@ -20,7 +20,7 @@ export async function getStaticPaths() {
   console.log(title, description);
   
 
-const section = await fetch("https://www.saaralkaatru.com/"+sk).then((response) => response.body);
+const section = await fetch(import.meta.env.PUBLIC_INDIVIDUAL_BLOG_URL+sk).then((response) => response.body);
 
 let markddownText = await new Response(section).text();
 
