UI and Action yml changes

--- a/src/components/ui/NavigationItems.astro
+++ b/src/components/ui/NavigationItems.astro
@@ -11,11 +11,12 @@ const urls=[
   path:"/blogs",
   label:"Blogs"
 },{
-  id:"certificationpath",
-  path:"/certificationpath",
-  label:"Certification Path"
+  id:"cloudupskilling",
+  path:"/cloudupskilling",
+  label:"Cloud Upskilling"
 }
 ]
+
 ---
 <ul class="navbar-nav  md:flex items-center ml-auto font-semibold">
   {
