--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const data = await fetch(
 ---
 
 <GeneralLayout
-  content={{ title: "Cloud&Devops Babies", description: "Main Page" }}
+  content={{ title: "Cloud&DevOps Babies", description: "This is the official website of Cloud&DevOps Babies group moderated by Manoj Joseph" }}
 >
   <section class="">
     <div class="py-8 px-4 mx-auto max-w-max lg:py-8 lg:px-6">
@@ -29,7 +29,7 @@ const data = await fetch(
         </div>
 
         <div
-          class="mb-4 font-light mt-6 text-lg text-slate-700 dark:text-slate-400 space-y-6"
+          class="mb-4 font-light mt-6 text-lg text-slate-700 dark:text-slate-200 space-y-6"
         >
           <p>
             This is a global WhatsApp group of IT professionals around the
@@ -55,14 +55,14 @@ const data = await fetch(
         <LinkButton
           mainButton="Y"
           text="Join the Group"
-          url="https://docs.google.com/spreadsheets/d/1SEjA7oxg4R555hFlRVmWx-zsnfbs70C3_5YBH0HM8pI/edit?usp=sharing"
+          url="https://docs.google.com/forms/d/1hvP3jMDt5S7UFub0t-48V2ALb_opJOixBRWX0uHHXf4/viewform?pli=1&pli=1&edit_requested=true"
         />
       </div>
       <div>
         <LinkButton
           mainButton="Y"
           text="Certification Challenge"
-          url="https://docs.google.com/spreadsheets/d/1SEjA7oxg4R555hFlRVmWx-zsnfbs70C3_5YBH0HM8pI/edit?usp=sharing"
+          url="https://docs.google.com/forms/d/199xY04mF1guwhJk1UOEkMyoUu78LkdJM1HH97HzulT8/viewform?edit_requested=true"
         />
       </div>
     </div>
