--- a/src/components/ui/Head.astro
+++ b/src/components/ui/Head.astro
@@ -12,7 +12,7 @@ const { title, description } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/baby.ico" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
@@ -20,6 +20,6 @@ const { title, description } = Astro.props;
 <meta name="title" content={title} />
 <meta name="description" content={description} />
 
-<link rel="stylesheet" href="./../../node_modules/flowbite/dist/flowbite.min.css"/>
+
 <script src="../../../node_modules/flowbite/dist/flowbite.js"></script>
 <script src="../../../node_modules/tw-elements/dist/js/index.min.js"></script>
