--- a/src/layout/GeneralLayout.astro
+++ b/src/layout/GeneralLayout.astro
@@ -26,7 +26,7 @@ const {
           expiry: now.getTime() + ttl,
         };
 
-        fetch(import.meta.env.PUBLIC_VISITOR_LOG_URL);
+       // fetch(import.meta.env.PUBLIC_VISITOR_LOG_URL);
         localStorage.setItem(key, JSON.stringify(item));
       }
 
@@ -97,7 +97,7 @@ const {
   </head>
 
   <body
-    class="antialiased text-slate-500 dark:text-slate-400 bg-slate-100 dark:bg-slate-800"
+    class="antialiased text-slate-500 dark:text-slate-300 bg-slate-100 dark:bg-slate-800"
   >
     <Menu />
     <main class="dark:bg-slate-900 tw-h-full">
