--- a/src/layout/SectionLayout.astro
+++ b/src/layout/SectionLayout.astro
@@ -13,7 +13,7 @@ const {
 <div class={`md:w-${width} max-w-full` } >
 <div class="p-8 mb-10 bg-slate-50 dark:bg-slate-900 flex flex-col items-start shadow-xl shadow-zinc-300 lg:mr-0.3 dark:shadow-gray-800">
   <h2
-    class="mb-4 text-2xl tracking-tight font-bold text-gray-900  dark:text-sky-500"
+    class="mb-4 text-2xl tracking-tight font-bold text-sky-700  dark:text-sky-500"
   >
     {title}
   </h2>
