--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const data = await fetch(
 ---
 
 <GeneralLayout
-  content={{ title: "Cloud&DevOps Babies", description: "This is the official website of Cloud&DevOps Babies group moderated by Manoj Joseph" }}
+  content={{ title: "CloudAndDevOps Babies", description: "This is the official website of Cloud&DevOps Babies group moderated by Manoj Joseph", type: "website"}}
 >
   <section class="">
     <div class="py-8 px-4 mx-auto max-w-max lg:py-8 lg:px-6">
