--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -26,7 +26,7 @@ let markddownText = await new Response(section).text();
 
 ---
 
-<GeneralLayout content={{ title: "Cloud&Devops Babies", description: "Test" }}>
+<GeneralLayout content={{ title: "CloudAndDevOps Babies", description: "Blogs related to Cloud&DevOps",type:"article" }}>
 <SectionLayout content={{title:title,width:"1"}}>
 
 <MarkDownReader content={markddownText} client:visible/>
