--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -8,12 +8,12 @@ const blogUrl = import.meta.env.PUBLIC_MAIN_SITE_URL+"dynamic/blogs.json"
 const data = await fetch(blogUrl).then((response) => response.json()).catch((error) =>console.log("No Blogs found"));
 ---
 
-  <GeneralLayout content={{ title: "Cloud&Devops Babies", description: "Cloud&DevOps Babies Blogs Page" }}>
-    <section class="text-slate-700 dark:text-slate-300 h-screen body-font overflow-hidden">
+  <GeneralLayout content={{ title: "Cloud-Devops Blogs", description: "Cloud&DevOps Babies Blogs Page",type:"article" }}>
+    <section class="text-slate-700 dark:text-slate-300  body-font max-w-max ">
       <div class="container px-5 py-14 mx-auto ">
-        <div class="flex flex-wrap -m-4">
+       
    {data && data.constructor === Array &&  <BlogItem client:visible data={data}/>}
-     </div>
+    
      </div>
  </section>       
          
