Removing unwanted files

--- a/src/components/ui/NavigationItems.astro
+++ b/src/components/ui/NavigationItems.astro
@@ -13,7 +13,7 @@ const urls=[
 },{
   id:"cloudupskilling",
   path:"/cloudupskilling",
-  label:"Cloud Upskilling"
+  label:"Upskilling in Cloud"
 }
 ]
 
