Upgrading to Astro2.0 and utilizing content feature

--- a/src/layout/GeneralLayout.astro
+++ b/src/layout/GeneralLayout.astro
@@ -18,7 +18,8 @@ const {
   <head>
     <!-- Global Metadata -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="/baby.ico" />
     <meta name="generator" content={Astro.generator} />
     <!-- Google tag (gtag.js) -->
@@ -83,7 +84,8 @@ const {
         })
       );
     </script>
-    <script src="../../node_modules/flowbite/dist/flowbite.js"></script>
+  
+  <script src="../../node_modules/flowbite/dist/flowbite.js"></script>
     <script src="../../node_modules/tw-elements/dist/js/index.min.js"></script>
     
   </head>
