--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,19 @@ import LinkButton from "../components/ui/LinkButton.astro";
 
 import GeneralLayout from "../layout/GeneralLayout.astro";
 import SectionLayout from "../layout/SectionLayout.astro";
-
+import { getCollection } from "astro:content";
+import Webinars from "../components/Webinars.astro";
 
 
 ---
 
-
 <GeneralLayout
-  content={{ title: "CloudAndDevOps Babies", description: "This is the official website of Cloud&DevOps Babies group moderated by Manoj Joseph", type: "website"}}
+  content={{
+    title: "CloudAndDevOps Babies",
+    description:
+      "This is the official website of Cloud&DevOps Babies group moderated by Manoj Joseph",
+    type: "website",
+  }}
 >
   <section class="">
     <div class="py-8 px-4 mx-auto max-w-max lg:py-8 lg:px-6">
@@ -26,7 +31,7 @@ import SectionLayout from "../layout/SectionLayout.astro";
         </div>
 
         <div
-          class="mb-4 font-light mt-6 text-lg text-slate-700 dark:text-slate-200 space-y-6"
+          class="mb-4 font-light mt-6 text-lg text-slate-900 dark:text-slate-200 space-y-6"
         >
           <p>
             This is a global WhatsApp group of IT professionals around the
@@ -65,16 +70,16 @@ import SectionLayout from "../layout/SectionLayout.astro";
     </div>
   </section>
   <section
-    class="mt-2 text-gray-600 body-font overflow-hidden dark:text-slate-300"
+    class="mt-2 text-slate-900 body-font overflow-hidden dark:text-slate-300"
   >
     <div class="container px-5 py-8 mx-auto max-w-screen-xl lg:py-8 lg:px-6">
       <div class="flex flex-wrap -m-12 p-16">
         <SectionLayout content={{ title: "Proof of Concepts", width: "1" }}>
-          <p class="mb-4 font-light">
+          <p class="mb-4 font-medium">
             Nothing beats the hands-on exercise! Apart from certifications, our
             group members also actively involve in developing POCs.
           </p>
-          <p class="font-light">
+          <p class="font-medium">
             Right from discovery phase to execution phase, the members working
             in POC try to follow the actual production grade process and best
             practices with suggestions from Joe.
@@ -88,13 +93,13 @@ import SectionLayout from "../layout/SectionLayout.astro";
         </SectionLayout>
 
         <SectionLayout content={{ title: "Group Studies", width: "1" }}>
-          <p class="mb-4 font-light">
+          <p class="mb-4 font-medium">
             Learning is effective and fun when we do it in group. Babies who aim
             towards a certificate form a study group. Group studies foster an
             environment to network with people, discuss more ideas and a
             commitment to spend fixed hours daily for upskilling.
           </p>
-          <p class="font-light">
+          <p class="font-medium">
             The only rule to join a study group is book the exam date prior.
           </p>
           <div class="px-2 max-w-screen-xl">
@@ -106,31 +111,18 @@ import SectionLayout from "../layout/SectionLayout.astro";
         </SectionLayout>
 
         <SectionLayout content={{ title: "Webinars", width: "1" }}>
-          <p class="mb-4 font-light">
-            Gaining operational knowledge is hard unless someone operates in
-            that environment. Joe along with many other industry professionals
-            conduct Cloud Professional weekend sharing session.
-          </p>
-          <p class="font-light">
-            Apart from Technology related sessions, we also have regular
-            meetings for LinkedIn profile renovation , Resume renovation, Mock
-            interviews.
-          </p>
-          <div class="px-2 max-w-screen-xl">
-            <LinkButton
-              text="Watch"
-              url="https://www.youtube.com/c/CloudandDevOpsBabies"
-            />
-          </div>
+         
+         <Webinars/>
+
+
         </SectionLayout>
-      
-            <SectionLayout content={{ title: "Testimonials", width: "1" }}>
-              <div class="flex flex-wrap -m-4">
-                <Testimonial client:load  />
-              </div>
-            </SectionLayout>
-          
-        
+
+          <SectionLayout content={{ title: "Testimonials", width: "1" }}>
+            <div class="flex flex-wrap -m-4">
+              <Testimonial client:load />
+            </div>
+          </SectionLayout>
+       
       </div>
     </div>
   </section>
