UI fix for youtube player

--- a/src/components/Webinars.astro
+++ b/src/components/Webinars.astro
@@ -11,7 +11,7 @@ const videos = await getCollection("webinars");
     environment. Joe along with many other industry professionals conduct Cloud
     Professional weekend sharing session.
   </p>
-  <p class="font-medium mb-4">
+  <p class="font-medium md:mb-4">
     Apart from Technology related sessions, we also have regular meetings for
     LinkedIn profile renovation , Resume renovation, Mock interviews.
   </p>
