--- a/src/layout/SectionLayout.astro
+++ b/src/layout/SectionLayout.astro
@@ -11,7 +11,7 @@ const {
 } = Astro.props;
 ---
 <div class={`md:w-${width} max-w-full` } >
-<div class="p-8 mb-10 bg-slate-50 dark:bg-slate-800 flex flex-col items-start shadow-xl shadow-zinc-300 lg:mr-0.3 dark:shadow-gray-800">
+<div class="p-8 mb-10 bg-slate-50 dark:bg-slate-800  items-start shadow-xl shadow-zinc-300 lg:mr-0.3 dark:shadow-gray-800">
   <h2
     class="mb-4 text-2xl tracking-tight font-bold text-sky-700  dark:text-sky-500"
   >
