Moving the testimonials button and displaying all the testimonials during the initial load

--- a/src/components/ui/Menu.astro
+++ b/src/components/ui/Menu.astro
@@ -52,7 +52,7 @@ document.addEventListener('click',(event)=>{
 
     <div>
       <button class="      
-     md:hidden
+     lg:hidden
       text-gray-500
       border-0
       hover:shadow-none hover:no-underline
@@ -71,7 +71,7 @@ document.addEventListener('click',(event)=>{
  
   </button>
   <div
-        class=" hidden  md:hidden fixed top-0 left-0 right-0 z-50  w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full"
+        class=" hidden  lg:hidden fixed top-0 left-0 right-0 z-50  w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full"
         id="headlessui-dialog-1"
         role="dialog"
         aria-modal="true"
