Updated recent change in moderator of group

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,10 +42,12 @@ import Webinars from "../components/Webinars.astro";
             Everyone is learning in the group!
           </p>
           <p>
-            This group is moderated by <a
+            This group was was initiated in 2019 by  <a
               class="font-semibold"
               href="https://www.linkedin.com/in/joem75/">Joe M</a
-            > popularly known as JoeVirus amoung the group members. Joe's favorite
+            > popularly known as JoeVirus amoung the group members. For the past three years, Joe had been serving as the moderator of the group, but he has recently handed over the baton to <a
+            class="font-semibold"
+            href="https://www.linkedin.com/in/mukund-bajaj/">Mukund Bajaj</a>. Joe's favorite
             rant is "You are as good as your last movie. Keep your brags fresh."
             Keep upskilling!
           </p>
