Reverted moderator changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,24 +33,22 @@ import Webinars from "../components/Webinars.astro";
         <div
           class="mb-4 font-light mt-6 text-lg text-slate-900 dark:text-slate-200 space-y-6"
         >
-          <p>
-            This is a global WhatsApp group of IT professionals around the
-            world. The members of the group go through very harsh criticism that
-            is blunt and ruthless if they fail to meet the learning schedule. We
-            do enjoy good jokes and have fun in the group. In order to be part
-            of this group the above is mandatory and you should not have an ego.
-            Everyone is learning in the group!
-          </p>
-          <p>
-            This group was was initiated in 2019 by  <a
-              class="font-semibold"
-              href="https://www.linkedin.com/in/joem75/">Joe M</a
-            > popularly known as JoeVirus amoung the group members. For the past three years, Joe had been serving as the moderator of the group, but he has recently handed over the baton to <a
+        <p>
+          This is a global WhatsApp group of IT professionals around the
+          world. The members of the group go through very harsh criticism that
+          is blunt and ruthless if they fail to meet the learning schedule. We
+          do enjoy good jokes and have fun in the group. In order to be part
+          of this group the above is mandatory and you should not have an ego.
+          Everyone is learning in the group!
+        </p>
+        <p>
+          This group is moderated by <a
             class="font-semibold"
-            href="https://www.linkedin.com/in/mukund-bajaj/">Mukund Bajaj</a>. Joe's favorite
-            rant is "You are as good as your last movie. Keep your brags fresh."
-            Keep upskilling!
-          </p>
+            href="https://www.linkedin.com/in/joem75/">Joe M</a
+          > popularly known as JoeVirus amoung the group members. Joe's favorite
+          rant is "You are as good as your last movie. Keep your brags fresh."
+          Keep upskilling!
+        </p>
         </div>
       </div>
     </div>
