Updating group invite link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ import Webinars from "../components/Webinars.astro";
         <LinkButton
           mainButton="Y"
           text="Join the Group"
-          url="https://docs.google.com/forms/d/1hvP3jMDt5S7UFub0t-48V2ALb_opJOixBRWX0uHHXf4/viewform?pli=1&pli=1&edit_requested=true"
+          url="https://docs.google.com/forms/d/e/1FAIpQLSfB8CpHBKjzl0-zKJUPxSYidO555WkwTkaCVAsgx4jEe9J2eA/viewform"
         />
       </div>
       <div>
