Changes for new domain

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,9 +13,9 @@ import Webinars from "../components/Webinars.astro";
 
 <GeneralLayout
   content={{
-    title: "CloudAndDevOps Babies",
+    title: "PlatformDataSecurity Babies",
     description:
-      "This is the official website of Cloud&DevOps Babies group moderated by Manoj Joseph",
+      "This is the official website of PlatformDataSecurity Babies group moderated by Manoj Joseph",
     type: "website",
   }}
 >
