--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -8,7 +8,7 @@ const blogUrl = import.meta.env.PUBLIC_MAIN_SITE_URL+"dynamic/blogs.json"
 const data = await fetch(blogUrl).then((response) => response.json()).catch((error) =>console.log("No Blogs found"));
 ---
 
-  <GeneralLayout content={{ title: "Cloud-Devops Blogs", description: "Cloud&DevOps Babies Blogs Page",type:"article" }}>
+  <GeneralLayout content={{ title: "Cloud-Devops Blogs", description: "PlatformDataSecurity Babies Blogs Page",type:"article" }}>
     <section class="text-slate-700 dark:text-slate-300  body-font max-w-max ">
       <div class="container px-5 py-14 mx-auto ">
        
