--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -27,7 +27,7 @@ let markddownText = await new Response(section).text();
 
 ---
 
-<GeneralLayout content={{ title: "CloudAndDevOps Babies", description: "Blogs related to Cloud&DevOps",type:"article" }}>
+<GeneralLayout content={{ title: "PlatformDataSecurity Babies", description: "Blogs related to PlatformDataSecurity",type:"article" }}>
 <SectionLayout content={{title:title,width:"1"}}>
 
 <MarkDownReader content={markddownText} client:visible/>
