--- a/src/components/ui/Menu.astro
+++ b/src/components/ui/Menu.astro
@@ -47,7 +47,7 @@ document.addEventListener('click',(event)=>{
     <div
       class="font-extrabold justify-start content-center relative flex items-center"
     >
-      <h2 class="mr-4 text-2xl font-bold">Cloud&amp;Devops Babies</h2>
+      <h2 class="mr-4 text-2xl font-bold">PlatformDataSecurity Babies</h2>
     </div>
 
     <div>
