--- a/src/components/ui/Menu.astro
+++ b/src/components/ui/Menu.astro
@@ -45,11 +45,15 @@ document.addEventListener('click',(event)=>{
     class="container-fluid w-full flex flex-wrap items-center justify-between px-6"
   >
     <div
-      class="font-extrabold justify-start content-center relative flex items-center"
+      class="font-extrabold justify-start content-center relative flex items-center hidden md:block"
     >
       <h2 class="mr-4 text-2xl font-bold">PlatformDataSecurity Babies</h2>
     </div>
-
+    <div
+    class="font-extrabold justify-start content-center relative flex items-center  md:hidden"
+  >
+    <h2 class="mr-4 text-2xl font-bold">PDS Babies</h2>
+  </div>
     <div>
       <button class="      
      lg:hidden
