--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import Webinars from "../components/Webinars.astro";
           class="mb-4 font-light mt-6 text-lg text-slate-900 dark:text-slate-200 space-y-6"
         >
         <p>
-          This is a global WhatsApp group of IT professionals around the
+          PlatformDataSecurity Babies is a global WhatsApp group of IT professionals around the
           world. The members of the group go through very harsh criticism that
           is blunt and ruthless if they fail to meet the learning schedule. We
           do enjoy good jokes and have fun in the group. In order to be part
