--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Webinars from "../components/Webinars.astro";
       >
         <div class="flex">
           <div class="m-auto">
-          <!--  <img src="/baby.jpg" />--> 
+           <img src="/pds.png" />
           </div>
         </div>
 
