Image size reduction

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import Webinars from "../components/Webinars.astro";
         class="max-w-screen-xl px-8 text-gray-500 sm:text-lg dark:text-gray-400"
       >
         <div class="flex">
-          <div class="m-auto">
+          <div class="m-auto object-cover h-38 w-96">
            <img src="/pds.png" />
           </div>
         </div>
